# FlappyBird

./: .gitignore  CMakeLists.txt  Makefile  README.md  boundaries.txt  calibration_boundaries.txt
src/: Recording.cpp  Recording.hpp  ScreenCapture.hpp  VideoSource.hpp  WebCam.hpp  arm.cpp  arm.hpp  arm1.cpp  arm1.hpp  bird.cpp  bird.hpp  camera.cpp  camera.hpp  constants.hpp  display.cpp  display.hpp  driver.cpp  driver.hpp  featureDetector.cpp  featureDetector.hpp  gap.hpp  main.cpp  old_algs.cpp  physicalArm.cpp  physicalArm.hpp  simulatedArm.hpp  speed.hpp  units.hpp  util.hpp  world.cpp  world.hpp
